--- a/6주차.md
+++ b/6주차.md
@@ -1,1 +1,118 @@
+## 스터디 주제
 
+*  Race Condition
+*  Semaphore & Mutex
+*  UDP
+
+## Race Condition
+
+- Race Condition 이란?
+  <details>
+    두 개 이상의 프로세스가 공통 자원을 병렬적으로 읽거나 쓰는 동작을 할 때, 공용 데이터에 대한 접근 순서에 따라 결과값이 달라지는 상황
+    
+- Critical Section (임계 영역) 이란 무엇인가요?
+    
+    Critical Section은 **동일한 자원에 접근하는 코드 영역** 을 의미한다.
+  </details>
+    
+- Race Condition이 발생하는 순간 3가지를 설명해주세요.
+
+  <details>
+      1. 커널 작업을 수행하는 중 인터럽트 발생
+    2. 프로세스가 시스템 콜을 하여 커널모드로 진입 할 때 컨텍스트 스위칭이 발생할 때
+    3. 멀티 프로세서 환경에서 공유 메모리 내의 커널 데이터에 접근 할 때
+  </details>
+
+- 임계영역이 발생하지 않도록 만족해야하는 조건
+  <details>
+    - `상호 배제(Mutual exclution)` | 하나의 프로세스가 임계 영역에 들어가 있다면 다른 프로세스는 들어갈 수 없어야 한다.
+    - `진행(Progress)` | 임계 영역에 들어간 프로세스가 없는 상태에서, 들어가려 하는 프로세스가 여러개라면 어느 것이 들어갈지 결정해주어야 한다.
+    - `한정 대기(Bounded waiting)` | 다른 프로세스의 기아(Starvation)을 방지하기 위해, 한 번 임계 구역에 들어간 프로세스는 다음 번 임계 영역에 들어갈 때 제한을 두어야 한다.
+  </details>
+
+## Semaphore & Mutex
+
+- Semaphore 방식에 대해 설명해주세요.
+    <details>
+    `**세마포어** : 멀티 프로그래밍 환경에서 공유 자원에 대한 접근을 제한하는 방법`
+    </details>
+    
+- Mutex 방식에 대해 설명해주세요.
+    <details>
+    **`Mut`**ual **`Ex`**clusion 의 약자로서 임계 구역(Critical Section)을 가진 스레드들의 실행시간이 서로 겹치지 않고 단독으로 실행되게 하는 기술
+    </details>
+- Mutex lock 이란?
+    <details>
+    하나의 프로세스가 key를 가지고 임계 영역에 들어가서 lock을 걸면, 그 키를 가지고 있지 않은 다른 프로세스들은 임계 영역에 들어가지 못하고 기다리게 됩니다.
+    
+    실행 중인 프로세스가 모두 처리 후 키를 반환하면, 그 때 대기하던 프로세스 중 하나가 들어갈 수 있습니다.
+    </details>
+- Semaphore 방식과 Mutex방식의 차이점을 설명해주세요.
+    <details>
+    세마포어는 자원 풀에 대한 접근을 규제하는 데 사용되는 반면 뮤텍스는 단일 공유 자원에 대한 접근을 규제하는 데 사용된다.
+    </details>
+- 동시 프로그래밍에서 뮤텍스의 목적과 이진 세마포어와의 차이점은 무엇인가요?
+    <details>
+    뮤텍스의 목적은 상호 배제를 보장하는 것이며, 뮤텍스는 공유 리소스에 대한 접근을 사전에 방지하는 잠금기능을 제공하며, 이진 세마포어와는 다르게 뮤텍스는 공유자원을 점유했을 때 소      유한 스레드만이 잠금을 해제할 수 있는 유일한 스레드라는 소유개념을 가지고 있다.
+    </details>
+- 뮤텍스 대신 세마포어 방식을 사용하는 경우는 어떤 경우인가요? 그 예시를 들어주세요.
+    <details>
+    뮤텍스 대신 세마포어를 사용하는 시나리오는 하나의 공유 리소스가 아닌 리소스 풀에 대한 액세스를 규제해야 하는 경우입니다.
+    
+    세마포어는 네트워크 연결이나, DB Connection 의 접근을 제어하지만, 뮤텍스는 단일 공유 데이터에 대한 접근을 제어한다.
+    
+    node js & mysql <<
+    </details>
+- 세마포어와 뮤텍스방식을 이용할 때 데드락이 발생할 수 있나요? 발생한다면 해결방법은?
+    <details>
+    교착 상태를 피하려면 모든 스레드가 동일한 순서로 잠금을 획득하는지 확인하고, 가능한 한 빨리 잠금을 해제하고, 순환 대기 조건을 피하는 것과 같은 몇 가지 일반적인 지침을 따르는 것이 중요하다.
+    </details>
+
+## UDP
+
+- TCP 와 UDP의 차이점은 무엇인가요?
+    <details>
+    **TCP**는 연결형 서비스로 3-way handshaking 과정을 통해 연결을 설정하기 때문에 높은 신뢰성을 보장하지만, 속도가 비교적 느리다는 단점이 있습니다.
+    
+    **UDP**는 비연결형 서비스로 3-way handshaking을 사용하지 않기 때문에 신뢰성이 떨어지는 단점이 있지만, 데이터 수신 여부를 확인하지 않기 때문에 속도가 빠르다는 장점이 있습니다.
+    </details>
+- UDP의 장단점?
+    <details>
+    장점
+    
+    - 낮은 오버헤드
+    - 빠른 통신
+    - 비교적 간단한 구현
+    
+    단점
+    
+    - 신뢰성의 부족
+    - 흐름제어 어려움
+    - 데이터의 손실, 손상위험이 증가
+  </details>
+- UDP에서 흐름제어와 신뢰성을 어떻게 보장하나요?
+    <details>
+    보장 못한다. UDP는 신뢰성과 흐름제어를 보장하는 별도의 메커니즘을 가지고 있지 않기 때문에. 이를 처리하기 위한 일들을 애플리케이션 계층에 의존한다.
+    </details>
+- UDP를 사용하기 적합한 상황과 TCP를 사용하기 적합한 상황을 이야기 해주실수 있나요?
+    <details>
+    UDP
+    
+    - 실시간 게임이나 스트리밍 환경같은 낮은 지연시간과 빠른 통신이 중요한 경우
+    
+    TCP
+    
+    - 파일 전송이나 이메일과 같은 신뢰성과 데이터 무결성이 중요한 경우
+    </details>
+- UDP의 CheckSum에 대해 설명해주실 수 있나요?
+    <details>
+    이렇게 계산한 checksum 값을 송신측에서 checksum 영역에 넣어서 송신측에 보내면 송신측도 마찬가지로 sum값을 구하고, checksum 값을 구해서 송신측에서 보낸 checksum 과 동일한지 확인한다. 만약 동일하다면 에러가 없는 것이고 동일하지 않다면 에러가 있다는 것을 확인 할 수 있다.
+    
+    ⇒ 에러 검출
+    </details>
+- UDP 와 WebSocket의 차이점?
+
+
+
+## 정리 링크
+김준엽 - https://www.notion.so/Week6-Race-Condition-semaphore-Mutex-UDP-94482c89ecfa4d808de860d5f5ae85ba
