[02.13] 6주차 정리한 링크 추가

--- a/6주차.md
+++ b/6주차.md
@@ -9,12 +9,12 @@
 - Race Condition 이란?
   <details>
     두 개 이상의 프로세스가 공통 자원을 병렬적으로 읽거나 쓰는 동작을 할 때, 공용 데이터에 대한 접근 순서에 따라 결과값이 달라지는 상황
-    
+  
 - Critical Section (임계 영역) 이란 무엇인가요?
-    
+  
     Critical Section은 **동일한 자원에 접근하는 코드 영역** 을 의미한다.
   </details>
-    
+  
 - Race Condition이 발생하는 순간 3가지를 설명해주세요.
 
   <details>
@@ -116,3 +116,5 @@
 
 ## 정리 링크
 김준엽 - https://www.notion.so/Week6-Race-Condition-semaphore-Mutex-UDP-94482c89ecfa4d808de860d5f5ae85ba
+
+이수민 - https://sustco.tistory.com/38 (비밀번호 : 1234)
