--- a/5주차.md
+++ b/5주차.md
@@ -79,7 +79,7 @@
 
 8. 여러 CPU 스케줄링 알고리즘 사이에서 하나를 선택하기 위한 CPU 스케줄링 비교 기준이 있다면 어떤 것이 있을까요?
 
-    <detail>
+    <details>
        <summary>답변보기</summary>
         
         1. CPU 이용률
