--- a/6주차.md
+++ b/6주차.md
@@ -9,9 +9,9 @@
 - Race Condition 이란?
   <details>
     두 개 이상의 프로세스가 공통 자원을 병렬적으로 읽거나 쓰는 동작을 할 때, 공용 데이터에 대한 접근 순서에 따라 결과값이 달라지는 상황
-  
+  </details>
 - Critical Section (임계 영역) 이란 무엇인가요?
-  
+  <details>
     Critical Section은 **동일한 자원에 접근하는 코드 영역** 을 의미한다.
   </details>
   
@@ -36,7 +36,24 @@
     <details>
     `**세마포어** : 멀티 프로그래밍 환경에서 공유 자원에 대한 접근을 제한하는 방법`
     </details>
-    
+
+- Semaphore의 동작 과정에 대해 설명해주세요.
+    <details>
+    1. 먼저 도착한 A가 P(S)를 실행하여, S를 0으로 만들고 임계구역에 들어감
+    2. 그 뒤에 도착한 B가 P(S)를 실행하지만 S가 0이므로 대기상태
+    3. A가 임계 구역 수행을 마치고 V(S)를 실행하면 S는 다시 1이 됨
+    4. B는 이제 P(S)에서 while 문을 빠져나올 수 있고, 임계 구역으로 들어가 수행함
+    </details>
+
+- Semaphore가 제대로 동작하지 않는 경우 설명해주세요.
+    <details>
+    - 프로세스가 세마포어를 사용하지 않고 바로 임계구역에 들어간 경우 → 임계구역을 보호할 수 없다.
+    - `P()`를 두번 사용하여, wake_up 신호가 발생하지 않은 경우
+    - 프로세스 간의 동기화가 이루어지지 않아, 세마포어 큐에서 대기하고 있는 프로세스들이 무한 대기에 빠진다.  
+    - `P()` 와 `V()`를 반대로 사용하여, 상호 배제가 보장되지 않은 경우, 임계구역을 보호할 수 없다.
+    </details>
+
+
 - Mutex 방식에 대해 설명해주세요.
     <details>
     **`Mut`**ual **`Ex`**clusion 의 약자로서 임계 구역(Critical Section)을 가진 스레드들의 실행시간이 서로 겹치지 않고 단독으로 실행되게 하는 기술
@@ -50,6 +67,13 @@
 - Semaphore 방식과 Mutex방식의 차이점을 설명해주세요.
     <details>
     세마포어는 자원 풀에 대한 접근을 규제하는 데 사용되는 반면 뮤텍스는 단일 공유 자원에 대한 접근을 규제하는 데 사용된다.
+
+    - 세마포어는 뮤텍스가 될 수 있지만, 뮤텍스는 세마포어가 될 수 없음
+    - **세마포어는 소유 불가능하지만, 뮤택스는 소유가 가능함**
+        - 뮤텍스 - 접근 불가능
+        - 이진 세마포어 - 접근 가능
+    - 동기화의 개수가 다름
+
     </details>
 - 동시 프로그래밍에서 뮤텍스의 목적과 이진 세마포어와의 차이점은 무엇인가요?
     <details>
@@ -68,6 +92,15 @@
     교착 상태를 피하려면 모든 스레드가 동일한 순서로 잠금을 획득하는지 확인하고, 가능한 한 빨리 잠금을 해제하고, 순환 대기 조건을 피하는 것과 같은 몇 가지 일반적인 지침을 따르는 것이 중요하다.
     </details>
 
+- 스핀락이란 Lock을 가질 수 있을 때까지 반복해서 시도하는 작업을 말한다. 이로 인해 Busy Waiting이 발생할 위험이 있다. 그렇다면 뮤텍스가 스핀락 보다 항상 좋은 것일까?
+    <details>
+    스핀락이 더 좋은 경우
+
+    - 멀티 코어 환경
+    - 임계 구역에서 작업이 컨텍스트 스위칭보다 빨리 끝나면
+    참고자료 : [스핀락과 뮤텍스](https://www.youtube.com/watch?v=gTkvX2Awj6g)
+    </details>
+
 ## UDP
 
 - TCP 와 UDP의 차이점은 무엇인가요?
@@ -75,6 +108,10 @@
     **TCP**는 연결형 서비스로 3-way handshaking 과정을 통해 연결을 설정하기 때문에 높은 신뢰성을 보장하지만, 속도가 비교적 느리다는 단점이 있습니다.
     
     **UDP**는 비연결형 서비스로 3-way handshaking을 사용하지 않기 때문에 신뢰성이 떨어지는 단점이 있지만, 데이터 수신 여부를 확인하지 않기 때문에 속도가 빠르다는 장점이 있습니다.
+    </details>
+- UDP를 사용하는 경우
+    <details>
+    RTP, 멀티캐스트, DNS, 멀티미디어
     </details>
 - UDP의 장단점?
     <details>
@@ -94,6 +131,14 @@
     <details>
     보장 못한다. UDP는 신뢰성과 흐름제어를 보장하는 별도의 메커니즘을 가지고 있지 않기 때문에. 이를 처리하기 위한 일들을 애플리케이션 계층에 의존한다.
     </details>
+- DNS에서 UDP를 사용하는 이유?
+    <details>
+    Request의 양이 작다 → UDP Request에 담길 수 있다.
+    1. 3 way handshake로 연결을 유지할 필요가 없다.
+    2. Request에 대한 손실은 Application Layer에서 제어가 가능하다.
+    3. DNS : port 53번
+        - 그렇지만 크기가 512(UDP 제한)을 넘기면, TCP를 사용해야 한다.
+    </details>
 - UDP를 사용하기 적합한 상황과 TCP를 사용하기 적합한 상황을 이야기 해주실수 있나요?
     <details>
     UDP
@@ -112,9 +157,19 @@
     </details>
 - UDP 와 WebSocket의 차이점?
 
+- 최근 발표한 HTTP 3.0 버전에서는 TCP 기반의 프로토콜이 아닌 UDP 기반의 QUIC 프로토콜을 채택하였다. 왜 그런 지 알고 있는가?
+    <details>
 
+    1. TCP 구조 상 한계로 개선해도 여전히 느리다
+        - 와이파이를 바꾸면, 다시 새로운 커넥션을 맺어야 하기 때문에 끊김 현상
+        - 중간에 패킷이 유실되거나, 수신 측의 패킷 파싱 속도가 느리면 통신에 병목 발생 (HOLB)
+    2. UDP는 신뢰성이 없는 게 아니라, 탑재를 안했을 뿐
+        - 커스터마이징이 가능
+    </details>
 
 ## 정리 링크
 김준엽 - https://www.notion.so/Week6-Race-Condition-semaphore-Mutex-UDP-94482c89ecfa4d808de860d5f5ae85ba
 
 이수민 - https://sustco.tistory.com/38 (비밀번호 : 1234)
+
+박세정 - [6주차 정리 링크](https://evening-november-9ec.notion.site/6-801c7f6257ff4e15a2f1e09feb67a47e)
