--- a/7주차.md
+++ b/7주차.md
@@ -1,35 +1,60 @@
 ## 스터디 주제
 
-*  Race Condition
-*  Semaphore & Mutex
-*  UDP
+* 페이지 & 세그먼테이션
+* 페이지 교체 알고리즘
+* 대칭키 & 공개키
 
-## Race Condition
+## 페이지 & 세그먼테이션
 
-- Race Condition 이란?
+- 페이지와 세그먼테이션을 각각 설명하세요.
   <details>
-    두 개 이상의 프로세스가 공통 자원을 병렬적으로 읽거나 쓰는 동작을 할 때, 공용 데이터에 대한 접근 순서에 따라 결과값이 달라지는 상황
+   
+  페이지는 고정 사이즈의 작은 프로세스 조각이고, 세그먼테이션은 가변적인 영역인 세그먼트로 분할하는 것을 말한다.
+    
+  페이지 크기가 작으면 내부 단편화가 줄어들고, 페이지 사상 테이블은 늘어나며, 페이지 부재가 늘어난다.   
+    
+  페이지 부재 현상이 많이 일어나면 성능이 떨어진다.
+  
+  이러한 기법들은 다중 프로그래밍 시스템에 여러 프로세스를 수용하기 위해 주기억장치를 동적 분할하는 메모리 관리 작업이 필요하기 때문이다.
   </details>
-- Critical Section (임계 영역) 이란 무엇인가요?
+- 내부 단편화와 외부 단편화에 대해 설명하세요.
   <details>
-    Critical Section은 **동일한 자원에 접근하는 코드 영역** 을 의미한다.
+  단편화란 기억 장치의 빈 공간 또는 자료가 여러 조각으로 나뉘는 현상이다. 프로세스들이 메모리에 적재되고 제거되는 일이 반복되면 프로세스들이 차지하는
+  메모리 틈 사이에 사용하지 못할 만큼의 자유 공간이 늘어나게 된다.
+  
+  내부단편화: 주기억장치 내 사용자 영역이 실행 프로그램보다 커서 프로그램의 사용 공간을 할당 후 사용되지 않고 남게 되는 현상을 말한다.
+  
+  외부단편화: 남아있는 총 메모리 공간이 요청한 메모리 공간보다 크지만, 남아있는 공간이 연속적이지 않아 발생하는 현상
+  
+  
   </details>
   
-- Race Condition이 발생하는 순간 3가지를 설명해주세요.
+- 내부 단편화와 외부 단편화 해결 방법에 대해 설명하세요.
 
   <details>
-      1. 커널 작업을 수행하는 중 인터럽트 발생
-    2. 프로세스가 시스템 콜을 하여 커널모드로 진입 할 때 컨텍스트 스위칭이 발생할 때
-    3. 멀티 프로세서 환경에서 공유 메모리 내의 커널 데이터에 접근 할 때
+  내부 단편화는 통합과 압축, slab allocator 방식으로 해결한다. slab allocator은 페이지 프레임을 할당받아 공간을 작은 크기로 분할하고 메모리 요청시 작은 크기로 메모리를 할당/해제하는 동적 메모리 기법이다.
+  
+  외부 단편화는 통합과 압축, 버디 메모리 할당 방식으로 해결한다. 버디 메모리 할당 방식은 요청한 프로세스 크기에 가장 알맞은 크기를 할당하기 위해 메모리를 2의 지수승 크기로 분할하여 메모리를 할당하는 기법이다.
   </details>
 
-- 임계영역이 발생하지 않도록 만족해야하는 조건
+- 스레싱이란?
   <details>
-    - `상호 배제(Mutual exclution)` | 하나의 프로세스가 임계 영역에 들어가 있다면 다른 프로세스는 들어갈 수 없어야 한다.
-    - `진행(Progress)` | 임계 영역에 들어간 프로세스가 없는 상태에서, 들어가려 하는 프로세스가 여러개라면 어느 것이 들어갈지 결정해주어야 한다.
-    - `한정 대기(Bounded waiting)` | 다른 프로세스의 기아(Starvation)을 방지하기 위해, 한 번 임계 구역에 들어간 프로세스는 다음 번 임계 영역에 들어갈 때 제한을 두어야 한다.
+    어떤 프로세스가 계속적으로 페이지 부재가 발생하여 프로세스의 실제 처리 시간보다 페이지 교체 시간이 더 많아지는 현상이다.
+  
+    오류율이 클수록 스레싱이 많이 많이 발생한 것이고, 스레싱으로 인해 전체 시스템의 성능 및 처리율은 저하된다.
+    페이지 부재가 계속 증가하여 기억장치 접근 시간이 증가한다.
   </details>
-
+  
+ - 페이징 기법의 해결방안 중에 하나인 '워킹 세트'라는 것이 있는데 설명하세요.
+    <details>
+      각 프로세스가 많이 참조하는 페이지들의 집합을 주기억장치 공간에 계속 상주하게 하여 빈번한 페이지 교체 현상을 줄이고자 하는 기법이다. 이 기법은 워킹 세트
+      추적관리가 복잡하고, 워킹 세트 크기 설정의 모호함이 발생한다.
+    </details>
+    
+ - 페이지, 프레임을 설명하세요.
+    <details>
+      페이지는 고정 사이즈의 가상 메모리 내 프로세스 조각이고, 프레임은 페이지 크기와 같은 주기억장치의 메모리 조각이다.
+    </details>
 ## Semaphore & Mutex
 
 - Semaphore 방식에 대해 설명해주세요.
