[02.22]정리한 링크 추가

--- a/7주차.md
+++ b/7주차.md
@@ -8,11 +8,11 @@
 
 - 페이지와 세그먼테이션을 각각 설명하세요.
   <details>
-   
+  
   페이지는 고정 사이즈의 작은 프로세스 조각이고, 세그먼테이션은 가변적인 영역인 세그먼트로 분할하는 것을 말한다.
-    
+  
   페이지 크기가 작으면 내부 단편화가 줄어들고, 페이지 사상 테이블은 늘어나며, 페이지 부재가 늘어난다.   
-    
+  
   페이지 부재 현상이 많이 일어나면 성능이 떨어진다.
   
   이러한 기법들은 다중 프로그래밍 시스템에 여러 프로세스를 수용하기 위해 주기억장치를 동적 분할하는 메모리 관리 작업이 필요하기 때문이다.
@@ -80,8 +80,10 @@
   암호화와 복호화와 같은 암호키(대칭키)를 사용하는 알고리즘
   
   장점: 동일한 키를 주고 받기 때문에, 매우 빠르다는 장점이 있다. 대용량 Data 암호화에 적합하다.
- 
+
   단점: 대칭키 전달 과정에서 해킹 위험에 노출 위험이 있다.
     </details>
 
 ## 정리 링크
+
+수민 : https://sustco.tistory.com/39 (비밀번호:1234)
