20220224 8주차 스터디

--- a/8주차.md
+++ b/8주차.md
@@ -6,12 +6,114 @@
 
 ## 메모리
 
+- 메인 메모리란 무엇인지 설명하시오.
+
+  <details>
+
+    - 메인 메모리는 CPU가 직접 접근할 수 있는 기억 장치
+
+    - 프로세스가 실행되려면 프로그램이 메모리에 올라와야 함
+    
+  </details>
+
+
+- 64비트와 32비트의 차이는 무엇인지?
+
+  <details>
+
+    - 64비트와 32비트의 차이는 CPU가 한 번에 처리할 수 있는 데이터의 크기에 있습니다.
+
+    - 64비트 CPU는 32비트 CPU보다 더 많은 양의 데이터를 처리할 수 있으며, 더욱 정확하고 빠른 처리가 가능합니다.
+
+    - **CPU의 비트는 한 번에 다룰 수 있는 데이터의 최대 크기**
+
+        - CPU의 bit는 “메모리 주소 공간”의 크기와도 연관이 있다
+  
+  </details>
+
+
+- 프로그램을 메모리에서 실행하는 이유?
+
+  <details>
+
+  - 느리고 값싼 하드디스크는 제2저장장치로 사용
+
+  - 비싸고 빠른 메모리는 작업공간으로 사용
+
+  - 메모리를 계층적 구조로 만들어 작업속도를 올리고, 가격을 낮추는 방법을 “계층적 메모리 구조”라고 한다.
+
+  - **프로그램을 메모리에서 실행하는 이유는 CPU가 바로 접근하여 처리할 수 있기 때문**
+
+  - 디스크나 다른 저장장치에서 프로그램을 실행하면 CPU가 더 많은 시간을 소비하게 되어 작업이 더디게 처리됩니다.
+
+  </details>
+
+
+
+- MMU(메모리 관리 장치)는 무슨 역할을 해주는가?
+
+  <details>
+
+  - MMU가 지원되지 않으면 물리 주소를 직접 접근해야 하기 때문에 부담
+
+  - MMU는 사용자가 기억장소를 일일이 할당해야하는 불편 없애준다.
+
+  - 프로세스의 크기가 실제 메모리의 용량을 초과해도 실행될 수 있게 해준다.
+
+  </details>
+
+
+- 가상 주소라는 개념이 도입된 이유?
+
+  <details>
+  메모리의 공간이 한정적이기 때문에 사용자에게 더 많은 메모리를 제공하기 위해 가상 주소라는 개념 등장
+  </details>
+
+- 메모리 과할당이란 무엇인가?
+
+  <details>
+  실제 메모리의 사이즈보다 더 큰 사이즈의 메모리를 프로세스에 할당한 상황
+  </details>
+
+- 메모리가 고갈되면 어떤 현상이 발생할까요?
+
+  <details>
+
+  - 프로세스들의 Swap이 활발해지면서 CPU 사용률이 하락하게 되고, CPU가 놀고있는 것을 발견한 운영체제는 프로세스를 추가하게 되는 쓰레싱 현상이 발생한다.
+
+  - 쓰레싱이 해소되지 않을 경우, Out of Memory 상태로 판단되어 중요도가 낮은 프로세스를 찾아 강제로 종료하게 된다.
+
+  - 쓰레싱 (Trashing ) : 메모리 영역에 접근하게 될 때, 메모리에 페이지 부재(=페이지 폴트(Page fault)율이 높은 것을 의미한다.
+
+  출처 : [참고 자료](https://github.com/backtony/Backend_Interview_for_Beginner/blob/master/OS.md)
+
+  </details>
+
+- CPU 사용률을 계속 체크하는 이유
+
+  <details>
+
+  - 특정 시점만 체크한 경우 CPU 사용률이 높아보일 수 있다.
+
+  - 연속 체크시 CPU 사용률이 급격하게 떨어지는 구간을 발견할 가능성이 높아지고, 이때 메모리 적재량을 함께 체크하면 쓰레싱 유무를 확인할 수 있게 된다.
+
+  - 따라서 추가적인 서버자원을 배치하는 등 해결방안을 마련할 수 있다.
+
+  </details>
+
+
 - CPU가 데이터를 가져오기 위해 각 장치에 접근하는 것에 대해 설명하시오.
 
   <details>
   CPU는 캐시메모리, 주기억장치, 보조기억장치 순으로 접근한다.
   캐시 히트할경우 캐시 메모리에서 데이터를 CPU레지스터에 복사한다. 캐시미스가 뜰경우 주기억장치인 메모리에서 찾으며, 찾았을 경우 메모리의 데이터를 캐시 메모리에 복사하고, 캐시 메모리에 복제된 내용을 CPU레지스터에 복사한다. 
   메모리에서 찾지 못했을 경우, 보조기억장치에서 메모리에 적재하고 적재된 내용을 캐시메모리에 복사한다. 그리고 캐시 메모리의 데이터를 CPU레지스터에 복사한다.
+  </details>
+
+- 캐시의 등장 배경은?
+
+  <details>
+  CPU와 메인 메모리 속도를 맞추기 위해 캐시가 존재
   </details>
 
 - 캐시의 지역성에 대해 설명하시오.
@@ -35,15 +137,64 @@
 
   <details>
   캐시에 목적 데이터가 저장되어 있다면 바로 접근하여 출력할수 있어야 캐시가 의미가 있어진다.
-      따라서, 캐시에 저장하는 데이터에는 데이터의 메모리 주소 등을 기록해 둔 태그 를 달아놓게 되고 태그들의 묶음을 캐시라인 이라고 한다.</details>
+  따라서, 캐시에 저장하는 데이터에는 데이터의 메모리 주소 등을 기록해 둔 태그 를 달아놓게 되고 태그들의 묶음을 캐시라인 이라고 한다.</details>
 
 - MMU의 메모리 보호에 대해 설명하시오
 
   <details>
     프로세스는 독립적인 메모리 공간을 가져야 되고, 자신의 공간만 접근해야 한다. 따라서 한 프로세스에게 합법적인 주소 영역을 설정하고, 잘못된 접근이 오면 trap을 발생시키며 보호한다.
-      base<= x <base+limit 영역밖에서 접근을 요구하면 trap을 발생시킨다. </details>
+      `base<= x < base+limit` 영역밖에서 접근을 요구하면 trap을 발생시킨다. 
+  </details>
 
 ## 파일 시스템
+
+- 파일 시스템이란?
+
+  <details>
+
+  - 컴퓨터에서 파일이나 자료를 쉽게 발견할 수 있도록, 유지 및 관리하는 방법
+
+  - 저장매체에는 수많은 파일이 있기 때문에, 이런 파일들을 관리하는 방법
+
+  </details>
+
+
+- 파일 시스템의 특징?
+
+  <details>
+
+  1. 커널 영역에서 동작
+
+  2. 파일 CRUD 기능을 원활히 수행하기 위한 목적
+
+  3. 계층적 디렉터리 구조를 가진다.
+
+  4. 디스크 파티션 별로 하나씩 둘 수 있다.
+
+    </details>
+
+- 파일 시스템의 개발 목적?
+
+  <details>
+
+  - 하드디스크와 메인 메모리의 속도차를 줄이기 위함
+
+  - 파일 관리
+
+  - 하드디스크 용량의 효율적 이용
+
+  </details>
+
+- 파일 시스템의 구조
+
+  <details>
+
+  - 메타 영역 : 데이터 영역에 기록된 파일의 이름, 위치, 크기, 시간정보, 삭제유무 등의 파일 정보
+
+  - 데이터 영역 : 파일의 데이터
+
+  </details>
+
 
 - 파일시스템의 접근방법에 대해 말하시오.
 
@@ -91,6 +242,48 @@
 
 
 ## HTTP & HTTPS
+
+- HTTP 프로토콜이란 무엇인지?
+
+  <details>
+
+  - **www 상에서 정보를 주고받을 수 있는 포로토콜**
+
+  - 클라이언트와 서버 사이에 이루어지는 요청/응답 프로토콜
+
+  - 주로 HTML 문서를 주고 받는데 사용
+
+  - TCP(HTTP/1, HTTP/2), UDP(HTTP/3)를 사용하며, 80번 포트를 사용한다.
+
+  </details>
+
+- HTTP 프로토콜의 특징은 무엇인지?
+
+  <details>
+
+  - 비연결 지향(connectionless) : 클라이언트가 request를 서버에 보내고, 서버가 클라이언트에 요청에 맞는 response를 보내면 바로 연결을 끊는다.
+
+  - 상태 정보 유지 안 함(stateless) : 연결을 끊는 순간 클라이언트와 서버의 통신은 끝나며 상태 정보를 유지하지 않는다.
+
+  </details>
+
+- HTTPS는 무엇인지?
+
+  <details>
+
+  - **HTTP의 보안상 문제를 해결하기 위해 등장한 프로토콜**
+
+  - HTTP는 텍스트로 자원을 주고받기 때문에 네트워크를 가로챈다면 내용이 유출되는 보안 이슈가 발생한다.
+
+  - SSL, TLS(SSL의 최신 버전)를 이용해 암호화하여 주고받음
+
+      - 응용 계층 및 전송 계층 사이에 위치
+
+  - 443 포트 사용
+
+  - 모든 HTTP 요청과 응답 데이터는 네트워크로 보내기지 전에 **전송 계층과 응용 계층 사이에서 암호화** 된다.
+
+  </details>
 
 - HTTP Request Method의 종류
 
@@ -141,8 +334,57 @@
   같은 POST를 연속적으로 보낸다면 명령은 여러 번 내린 것처럼 부가적인 결과를 가져오기 때문이다.
   </details>
 
-  
+- 암호화 통신 방법 → 대칭키 / 공개키 7주차
+
+  <details>
+
+    - **공개키/개인키, 대칭키 방식을 혼합해서 사용**
+
+    1. A에서 B로 접속 요청
+
+    2. B에서 공개키를 A에게 전달
+
+    3. A는 자신의 대칭키를 공개키 A로 암호화해서 B에게 전달
+
+    4. B는 개인키로 복호화하여 A의 대칭키를 얻음
+
+    5. 얻어낸 대칭키를 이용하여 A와 B가 암호문을 주고 받음
+
+  </details>
+
+- HTTPS 통신 과정
+
+  <details>
+
+  1. 클라이언트(브라우저)가 서버로 **최초 연결 시도**를 함
+
+  2. **서버**는 **공개키(인증서)**를 브라우저에게 넘겨줌
+
+  3. **브라우저**는 **인증서의 유효성을 검사**하고, **세션키를 발급**함
+
+  4. 브라우저는 세션키를 보관하며 추가로 **서버의 공개키**로 **세션키를 암호화**하여 **서버로 전송**함
+
+  5. 서버는 개인키로 암호화된 세션키를 복호화하여 **세션키를 얻음**
+
+  6. 클라이언트와 서버는 **동일한 세션키를 공유**하므로, 데이터를 전달할 때 **세션키로 암호화/복호화를 진행**함
+
+  </details>
+
+- HTTPS의 단점은?
+
+  <details>
+
+  - 암호화 추가 비용 발생
+
+  - 암호화 과정에서 웹 서버에 부하
+
+  - 연결이 끊기면 재인증 시간이 소요
+
+  </details>
+
 
 ## 정리 링크
 
 수민 : https://sustco.tistory.com/40 (비밀번호:1234)
+
+세정 : [8주차 학습 내용 정리](https://evening-november-9ec.notion.site/8-452b2cad192b4642830df4d6e95fa50f)
