--- a/9주차.md
+++ b/9주차.md
@@ -32,6 +32,55 @@
     
   </details>
 
+- TLS란?
+  <details>
+    Transport Layer Security의 약자로서
+
+  인터넷에서의 정보를 암호화해서 송수신하는 프로토콜, 넷스케이프 커뮤니케이션스사가 개발한 국제 인터넷 표준화 기구에서 표준으로 인정받은 프로토콜이다. TCP443 포트를 사용한다.
+  </details>
+- TLS 와 SSL의 차이점은?
+  <details>
+  보안: TLS는 더 강력한 암호화 알고리즘, 더 나은 인증 메커니즘 및 향상된 키 교환 프로토콜을 가지고 있습니다.
+
+  프로토콜 버전: SSL은 2015년 이후 더 이상 안전하지 않으며 TLS는 계속 개발 및 개선되고 있습니다. TLS는 TLS 1.0, TLS 1.1, TLS 1.2, TLS 1.3을 포함한 여러 버전이 있으며, 각 버전은 이전 버전보다 더 나은 보안을 제공한다.
+
+  등 성능, 호환성 모든 부분에서 ssl보다 좋다.
+  </details>
+- TLS는 전송중에 데이터의 기밀성과 무결성을 어떻게 제공하는가?
+  <details>
+  암호화 및 디지털 서명을 통해 전송 중 데이터의 기밀성과 무결성을 제공하는데,
+
+  클라이언트와 서버간에 TLS 연결이 설정되면 클라이언트와 서버는 비대칭 암호화 알고리즘을 사용하여 공유 개인 키를 협상하고, 이를 대칭 암호화에 사용한다.
+
+  그리고 전송중에 데이터가 조작되지 않도록 발신인은 개인 키를 사용하여 데이터를 서명하고, 수신인은 발신인의 공용 키를 사용하여 서명을 확인 한다.
+  </details>
+- TLS/SSL HandShake의 과정을 설명해주세요.
+  <details>
+  1. 클라이언트는 서버에게 `client hello`메시지를 담아 서버로 보낸다. 이때 암호화된 정보를 함께 담는데, `버전`, `암호 알고리즘`, `압축 방식` 등을 담는다.
+  
+  2. 서버는 클라이언트가 보낸 암호 알고리즘과 압축 방식을 받고, `세션 ID`와 `CA 공개 인`를 `server hello`메시지와 함께 담아 응답한다. 이 CA 인증서에는 앞으로 통신 이후 사용할 대칭키가 생성되기 전, 클라이언트에서 handshake 과정 속 암호화에 사용할 공개키를 담고 있다.
+  
+  3. 클라이언트 측은 서버에서 보낸 CA 인증서에 대해 유효한 지 CA 목록에서 확인하는 과정을 진행한다.
+  
+  4. CA 인증서에 대한 신뢰성이 확보되었다면, 클라이언트는 난수 바이트를 생성하여 서버의 공개키로 암호화한다. 이 난수 바이트는 대칭키를 정하는데 사용이 되고, 앞으로 서로 메시지를 통신할 때 암호화하는데 사용된다.
+  
+  5. 만약 2번 단계에서 서버가 클라이언트 인증서를 함께 요구했다면, 클라이언트의 인증서와 클라이언트의 개인키로 암호화된 임의의 바이트 문자열을 함께 보내준다.
+  
+  6. 서버는 클라이언트의 인증서를 확인 후, 난수 바이트를 자신의 개인키로 복호화 후 대칭 마스터 키 생성에 활용한다.
+  
+  7. 클라이언트는 handshake 과정이 완료되었다는 `finished` 메시지를 서버에 보내면서, 지금까지 보낸 교환 내역들을 해싱 후 그 값을 대칭키로 암호화하여 같이 담아 보내준다.
+  
+  8. 서버도 동일하게 교환 내용들을 해싱한 뒤 클라이언트에서 보내준 값과 일치하는 지 확인한다. 일치하면 서버도 마찬가지로 `finished` 메시지를 이번에 만든 대칭키로 암호화하여 보낸다.
+  
+  9. 클라이언트는 해당 메시지를 대칭키로 복호화하여 서로 통신이 가능한 신뢰받은 사용자란 걸 인지하고, 앞으로 클라이언트와 서버는 해당 대칭키로 데이터를 주고받을 수 있게 된다.
+  </details>
+- TLS 세션 재개란? FROM(chatGPT)
+  <details>
+  TLS 세션 재개는 클라이언트와 서버가 전체 핸드셰이크 프로세스를 다시 거치지 않고 이전에 설정한 TLS 세션을 재개할 수 있도록 해주는 기능이다. 
+
+  이렇게 하면 새 TLS 연결을 설정하는 데 필요한 시간과 리소스가 줄어들어 성능이 향상됩니다. 또한 TLS 세션 재개는 공유 비밀 키가 교환되는 횟수를 줄여 보안을 향상시켜 키 교환 프로세스를 대상으로 하는 공격의 위험을 줄입니다.
+  </details>
+  
 ### 로드 밸런싱
 
 - 대규모 트래픽에 대처할 수 있는 방법?
@@ -175,7 +224,16 @@
         - 다른 릴레이션의 기본키를 그대로 참조하는 속성의 집합
         
   </details>
-
+  
+- LEFT OUTER JOIN 과 RIGHT OUTER JOIN 의 차이점은?
+    <details>
+      왼쪽테이블과 오른쪽테이블의 기준점의 차이점.
+    </details>
+- LEFT OUTER JOIN과 **INNER JOIN의 차이점은?**
+    <details>
+      두 테이블의 교집합만 조회할 것인가 왼쪽 테이블에 교집합을 추가한 부분을 조회할 것인가의 차이
+    </details>
 ## 정리 링크
 
 세정 : [9주차 학습 내용 정리](https://evening-november-9ec.notion.site/9-06b9b5aa468d41908f8e1114b11333b5)
+준엽 : [9주차 학습 내용 정리](https://spot-visitor-fff.notion.site/Week9-TLS-SSL-JOIN-6ff89d3465ec42dc8b62879475ab411f)
