--- a/10주차.md
+++ b/10주차.md
@@ -8,49 +8,36 @@
 
 ### Blocking, Non-Blocking & Synchronous, Asynchronous
 
-- TLS handshake 과정을 설명해주세요
+- blocking과 non-blocking의 차이점은 무엇인가요?
 
   <details>
-
-
-      1. 클라이언트는 서버에게 `client hello` 메시지를 담아 서버로 보낸다. 이때 암호화된 정보를 함께 담는데, `버전`, `암호 알고리즘`, `압축 방식` 등을 담는다.
-
-      2. 서버는 클라이언트가 보낸 암호 알고리즘과 압축 방식을 받고, `세션 ID`와 `CA 공개 인증서`를 `server hello` 메시지와 함께 담아 응답한다. 이 CA 인증서에는 앞으로 통신 이후 사용할 대칭키가 생성되기 전, 클라이언트에서 handshake 과정 속 암호화에 사용할 공개키를 담고 있다.
-
-      3. 클라이언트 측은 서버에서 보낸 CA 인증서에 대해 유효한 지 CA 목록에서 확인하는 과정을 진행한다.
-
-      4. CA 인증서에 대한 신뢰성이 확보되었다면, 클라이언트는 난수 바이트를 생성하여 서버의 공개키로 암호화한다. 이 난수 바이트는 대칭키를 정하는데 사용이 되고, 앞으로 서로 메시지를 통신할 때 암호화하는데 사용된다.
-
-      5. 만약 2번 단계에서 서버가 클라이언트 인증서를 함께 요구했다면, 클라이언트의 인증서와 클라이언트의 개인키로 암호화된 임의의 바이트 문자열을 함께 보내준다.
-
-      6. 서버는 클라이언트의 인증서를 확인 후, 난수 바이트를 자신의 개인키로 복호화 후 대칭 마스터 키 생성에 활용한다.
-
-      7. 클라이언트는 handshake 과정이 완료되었다는 `finished` 메시지를 서버에 보내면서, 지금까지 보낸 교환 내역들을 해싱 후 그 값을 대칭키로 암호화하여 같이 담아 보내준다.
-
-      8. 서버도 동일하게 교환 내용들을 해싱한 뒤 클라이언트에서 보내준 값과 일치하는 지 확인한다. 일치하면 서버도 마찬가지로 `finished` 메시지를 이번에 만든 대칭키로 암호화하여 보낸다.
-
-      9. 클라이언트는 해당 메시지를 대칭키로 복호화하여 서로 통신이 가능한 신뢰받은 사용자란 걸 인지하고, 앞으로 클라이언트와 서버는 해당 대칭키로 데이터를 주고받을 수 있게 된다.
-
+    blocking은 작업이 끝날 때까지 다른 작업을 수행하지 않고 기다리는 것이고, non-blocking은 작업이 진행되는 동안 다른 작업을 수행할 수 있는 것
   </details>
-
-- TLS란?
+- 동기, 비동기 방식의 차이점은?
+  <details>
+    동기는 요청과 응답이 한 번에 처리되는 방식이다. 요청한 작업이 완료될 때까지 다음 작업을 처리하지 않는다.<br>
+    반면에 비동기는 요청한 작업의 완료 여부와는 관계없이 다음 작업을 처리하고, 요청한 작업이 완료되면, 이벤트나 콜백을 통해 결과값을 받아온다.
+  </details>
+- 비동기와 non-block의 차이는?
 
   <details>
-    Transport Layer Security의 약자로서
-
-  인터넷에서의 정보를 암호화해서 송수신하는 프로토콜, 넷스케이프 커뮤니케이션스사가 개발한 국제 인터넷 표준화 기구에서 표준으로 인정받은 프로토콜이다. TCP443 포트를 사용한다.
+    - 비동기식 처리는 요청을 처리하는 동안 다른 작업을 수행할 수 있고, 작업이 완료될 때 결과를 수신합니다. 
+    - 반면, non-blocking은 요청을 처리하는 동안 다른 작업을 수행할 수는 있지만, 작업이 완료되지 않으면 결과를 받을 수 없다.
   </details>
 
-- TLS 와 SSL의 차이점은?
+- blocking 방식의 단점은
 
   <details>
-  보안: TLS는 더 강력한 암호화 알고리즘, 더 나은 인증 메커니즘 및 향상된 키 교환 프로토콜을 가지고 있습니다.
-
-
-  프로토콜 버전: SSL은 2015년 이후 더 이상 안전하지 않으며 TLS는 계속 개발 및 개선되고 있습니다. TLS는 TLS 1.0, TLS 1.1, TLS 1.2, TLS 1.3을 포함한 여러 버전이 있으며, 각 버전은 이전 버전보다 더 나은 보안을 제공한다.
-
-  등 성능, 호환성 모든 부분에서 ssl보다 좋다.
+      - 작업이 완료될 때까지 다른작업을 수행하지 못하므로, 대기시간이 증가하여 성능 저하가 일어날 수 있다.<br>
+      - 특히 I/O작업의 경우에는 더 느려질 수가 있다.
   </details>
+
+- 동기와 비동기 방식의 장단점은?
+  <details>
+    - 동기 방식의 장점은 간단하고 직관적인 코드를 작성할 수 있으며, 결과를 즉시 얻을 수 있다는 것입니다. 그러나 작업이 완료될 때까지 다른 작업을 수행하지 못하므로, 전체적인 처리 속       도가 저하될 수 있습니다.<br>
+    - 비동기 방식의 장점은 작업을 동시에 처리할 수 있으므로, 전체적인 처리 속도가 빠르며, 대용량 처리가 가능하다는 것입니다. 하지만 구현이 복잡하고, 코드가 더 복잡해질 수 있다는 단       점이 있습니다.
+  </details>
+
 
 - 그렇다면 동기이면서 논블로킹이고 비동기이면서 블로킹인 경우는 의미가 있다고 할 수 있나요?
 
@@ -66,51 +53,25 @@
 
 ### Blocking & Non-Blocking I/O
 
-- 대규모 트래픽에 대처할 수 있는 방법
+- 블로킹 I/O 와 논블로킹 I/O이란?
 
   <details>
+    <블로킹>
+    <br>
+    - B가 끝날 때까지 A에게 제어권(주도권)을 바로 돌려주지 않는 경우(주도권이 B에게 있음)<br>
+    - B가 끝날 때 까지 A는 아무 일도 할 수 없음<br>
 
-
-    서버의 성능을 높이는 Scale-up과 분산 처리를 위해 여러 대의 서버를 두는 Scale-out이 있다. Scale-up 방식의 경우 한계가 있으므로 주로 Scale-out 방식을 사용한다. Scale-out 방식에서 분산 처리를 하기 위해 로드 밸런싱 기술을 사용한다.
-
+    <논블로킹>
+    <br>
+    - B가 끝나지 않더라도 A에게 제어권(주도권)을 바로 돌려주는 경우(주도권이 A에게 있음)<br>
+    - B가 끝나지 않더라도 A는 다른 일을 할 수 있음<br>
   </details>
 
-- Scale out 의 장점이 무엇인지 설명해주세요
+- Asynchronous blocking I/O 를 사용할 때의 예시와 문제점은?
 
   <details>
-
-
-    - 하드웨어 향상하는 비용보다 서버 한대 추가 비용이 더 적습니다.
-
-    - 여러 대의 Server 덕분에 무중단 서비스를 제공할 수 있습니다.
-
+    비동기적으로 코드가 실행되지만, blocking IO작업을 위해 주기적으로 polling작업을 수행하는 오버헤드가 발생한다.
   </details>
-
-
-- 로드 밸런서의 기본 기능은?
-
-  <details>
-
-
-    - 서버의 이상 유무를 파악하는 상태 확인(Health Check)
-
-    - 패킷을 캡슐화해서 연결된 상호 간에만 패킷을 구별할 수 있게 해주는 터널링(Tunneling)
-
-    - IP 주소를 변환해주는 NAT 기능이 있다.
-
-  </details>
-
-
-- 로드 밸런서의 종류?
-
-  <details>
-
-
-    로드 밸런서는 OSI 7계층을 기준으로 어떻게 부하를 분산하는 지에 따라 종류가 나뉜다. 그 중 L4 로드 밸런서와 L7 로드 밸런서가 가장 많이 활용된다.
-
-  </details>
-
-
 
 
 - blocking i/o 의 과정에 대해 설명하시오.
@@ -203,7 +164,25 @@
   이 경우, 대용량 데이터에서는 처리 시간이 많이 소요될 수 있습니다.
   따라서, JOIN을 수행할 때는 JOIN 조건에 사용되는 컬럼에 적절한 인덱스를 생성하여 JOIN 성능을 최적화하는 것이 중요합니다.
   </details>
-
+- SQL JOIN이란?
+    <details>
+      SQL 조인은 두 개 이상의 테이블 사이의 관련 열을 기준으로 데이터를 결합하는 방식입니다.<br>
+      단일 쿼리에서 여러 테이블의 데이터를 검색할 수 있습니다.
+    </details>
+    
+- JOIN의 종류는?
+    <details>
+      - inner join<br>
+      - left join<br>
+      - right join<br>
+      - full outer join<br>
+    </details>
+- inner join 과 left join의 차이점?
+    <details>
+      inner join은 두 테이블 사이의 일치하는 행만을 반환하고, left join은 왼쪽 테이블의 모든 행과 오른쪽 테이블에 일치하는 행을 반환한다.
+    </details>
+    
 ## 정리 링크
 
-수민 : https://sustco.tistory.com/42 비밀번호:1234
+수민 : https://sustco.tistory.com/42 비밀번호:1234<br>
+준엽 : https://www.notion.so/Week10-Network-DataBase-44daeaae93694643aa7e00a27f4debae
