--- a/11주차.md
+++ b/11주차.md
@@ -8,11 +8,21 @@
 ## 질문
 
 ### SQL Injection
-
-
-@준엽님
-
-
+- **SQL Injection이란?**
+    <details>
+    SQL Injection은 악의적인 사용자가 웹 어플리케이션의 입력 폼 등에서 SQL 쿼리를 조작하여, 데이터베이스에 비정상적인 접근을 시도하는 공격 기법입니다.
+    </details>
+- **SQL Injection이 발생하는 과정은??**
+    <details>
+    SQL Injection은 입력 폼 등에서 입력된 데이터를 쿼리문으로 바로 실행하는 경우에 발생할 수 있습니다. 
+    악의적인 사용자는 입력 폼에서 SQL 쿼리문을 조작하여, 데이터베이스에 비정상적인 접근을 시도합니다.
+    </details>
+- **SQL Injection을 방지하는 방법?**
+    <details>
+    SQL Injection을 방지하기 위해서는, 입력 값에 대한 검증과 정제 작업이 필요합니다. 
+    입력값에 SQL 구문을 포함하지 못하도록 입력값 검사를 강화하고, SQL 쿼리를 구성할 때 동적으로 생성되는 부분에 대해 보안 검사를 수행해야 합니다. 
+    또한, 데이터베이스 사용 권한을 최소한으로 설정하고, 보안 업데이트를 정기적으로 수행하여 보안 취약점을 최소화해야 합니다.
+    </details>
 ### SQL vs NoSQL
 
 - **RDB와 NoSQL의 차이에 대해 설명해주세요**
@@ -127,6 +137,37 @@
     - 데이터베이스의 성능과 가용성, 보안, 유지보수 비용
     </details>
 
+- **SQL과 NOSQL 차이점은 무엇인가요?**
+    <details>
+    SQL은 관계형 데이터베이스를 기반으로 한 데이터베이스이고, NoSQL은 비관계형 데이터베이스를 기반으로 한 데이터베이스입니다.
+    SQL은 스키마가 미리 정의되어 있어 데이터의 구조를 일관성 있게 유지하고 데이터의 무결성을 보장할 수 있습니다. 
+    NoSQL은 스키마가 미리 정의되어 있지 않아 자유롭게 데이터를 저장하고, 대용량 데이터 처리에 더 적합합니다.
+    </details>
+- **데이터 무결성이란?**
+    <details>
+    무결성이란 데이터의 정확성, 일관성, 유효성을 유지하는 것을 말합니다. 
+    그리고 무결성이 유지가 되어야 DB에 저장된 데이터 값과 거기에 해당하는 현실 세계의 실제값이 일치하는지 신뢰할 수 있습니다.
+    </details>
+- **SQL과 NoSQL의 장단점은 무엇인가요?**
+    <details>
+    <SQL><br>
+    장점<br>
+    - SQL은 데이터의 구조를 일관성 있게 유지하고 데이터의 무결성을 보장할 수 있습니다.<br>
+    - 데이터 조작을 위한 SQL 문법이 강력하며 다양한 데이터 조작 작업을 수행할 수 있습니다.<br>
+    단점<br>
+    - 대량의 데이터를 다룰때에는 성능이 떨어진다.<br>
+    <NOSQL><br>
+    장점<br>
+    - NoSQL은 대용량 데이터 처리에 더 적합하며, 데이터베이스를 확장하는 데 용이합니다.<br>
+    단점<br>
+    - 일관성있는 데이터 저장 및 검색이 어렵다.<br>
+    - 데이터의 무결성을 보장하기 어렵다.<br>
+    </details>
+- **NOSQL와 SQL 둘 중 확장성이 좋은 데이터 베이스는?**
+    <details>
+        SQL은 수평 확장이 어렵고, 수직 확장이 가능합니다. 반면, NoSQL은 수평 확장이 가능하며, 분산 데이터베이스를 구성할 수 있어 확장성이 더 높습니다.
+    </details>
+
 ### 정규화
 
 
@@ -142,8 +183,58 @@
 
     - 역정규화가 필요한 경우 항상 그리고 전체 테이블이 아닌 일부 테이블에서만 중복 데이터를 허용
     </details>
-
+- **데이터 베이스 정규화란?**
+    <details>
+        데이터베이스 정규화는 중복을 최소화하고 데이터의 일관성을 유지하기 위해 데이터베이스를 구조화하는 과정입니다. 
+        이를 통해 데이터의 저장 공간을 최적화하고, 데이터베이스에서 발생할 수 있는 이상 현상을 방지할 수 있습니다.
+    </details>
+- **정규화를 수행할 때 어떤 문제점이 발생할 수 있나요?**
+    <details>
+        정규화를 과도하게 수행하면 데이터의 일관성을 유지하기 어렵고, 데이터를 처리하기 위해 여러 테이블을 조인해야 하는 등의 불편함이 발생할 수 있습니다. 
+        또한, 정규화된 테이블이 많아지면 데이터베이스의 성능이 저하될 수 있습니다.
+    </details>
+- **역정규화를 하는 이유? (반정규화)**
+    <details>
+        정규화를 거치면 릴레이션 간의 연산(JOIN 연산)이 많아지는데, 이로인해 성능이 저하될 우려가 있습니다.
+        역정규화를 하는 가장 큰 이유는 성능 문제가 있는(읽기작업이 많이 필요한) DB의 전반적인 성능을 향상시키기 위함입니다.
+    </details>
+- **반(역)정규화란?**
+    <details>
+        데이터베이스 설계에서 성능 향상을 위해 정규화 원칙을 위배하여 테이블을 재설계하는 것을 말합니다.
+        예를 들어, JOIN 연산을 수행하는 경우에는 많은 리소스를 소비하게 되므로, JOIN 연산이 빈번한 테이블의 경우 성능 저하가 발생할 수 있습니다. 
+        이러한 경우에는 중복 데이터를 허용하거나, 여러 개의 테이블을 하나의 테이블로 합치는 등의 방법으로 역정규화를 수행하여 성능을 향상시킬 수 있습니다.
+    </details>
+- **1정규화란 무엇인가요?**
+    <details>
+        1정규화는 하나의 테이블에 중복된 데이터가 없도록 하는 것을 말합니다. 
+        즉, 각 속성(컬럼)이 원자값을 갖도록 만드는 것입니다.
+    </details>
+- **1정규화가 필요한 이유는 무엇인가요?**
+    <details>
+        1정규화를 수행하지 않으면 중복된 데이터가 많아지기 때문에 데이터베이스의 크기가 커지게 됩니다. 
+        또한, 중복된 데이터가 조작될 때 일관성을 유지하기 어렵고, 이상 현상이 발생할 가능성이 높아집니다.
+    </details>
+- **2정규화란 무엇인가요?**
+    <details>
+        2정규화는 테이블의 모든 속성이 기본키에 종속되도록 만드는 것을 말합니다. 
+        이를 통해 기본키가 아닌 속성으로 인한 종속 관계를 제거할 수 있습니다.
+    </details>
+- **2정규화가 필요한 이유는 무엇인가요?**
+    <details>
+        1정규화를 수행하더라도 테이블에 여전히 중복 데이터가 존재할 수 있습니다. 
+        이 중복 데이터는 기본키가 아닌 속성으로 인해 발생할 수 있습니다. 이를 제거하기 위해 2정규화를 수행합니다.
+    </details>
+- **3정규화란 무엇인가요?**
+    <details>
+        3정규화는 테이블의 속성 간에 이행적 종속 관계를 제거하여 각 속성이 독립적으로 존재할 수 있도록 만드는 것을 말합니다.
+    </details>
+- **3정규화가 필요한 이유는 무엇인가요?**
+    <details>
+        2정규화를 수행하더라도 테이블에 여전히 이행적 종속 관계가 존재할 수 있습니다. 
+        이러한 이행적 종속 관계는 데이터를 수정하는 과정에서 문제를 일으킬 수 있기 때문에 제거해야 합니다.
+    </details>
 
 ### 정리 링크
 
-* 세정 : [11주차 공부 내용](https://evening-november-9ec.notion.site/11-57263d42bb8f4e53a497284c55d85541)
+* 세정 : [11주차 공부 내용](https://evening-november-9ec.notion.site/11-57263d42bb8f4e53a497284c55d85541)<br>
+* 준엽 : [11주차 공부 내용](https://www.notion.so/Week11-SQL-Injection-SQL-VS-NOSQL-6a61a40827b445499444f885d5318359)<br>
