--- a/12주차.md
+++ b/12주차.md
@@ -136,6 +136,27 @@
     
     
     참고 : https://github.com/gyoogle/tech-interview-for-developer/blob/master/Computer%20Science/Database/%5BDB%5D%20Index.md
+    
+- **covering index란?**
+    
+    <details>
+    조회하는 특성들의 index가 모두 cover될 때<br>
+    실무에서 조회 성능을 높이기 위해 종종 사용한다.<br>
+    인덱스 크기가 증가하고 추가 디스크 공간이 필요하다는 단점이 있다.<br>
+    </details>
+    
+- **Index 데이터 구조 중에서 B-tree구조 이외의 다른 구조에 대해 아는가?**
+    
+    <details>
+    Hash Index, Bitmap Index, R-tree Index, Gist Index
+    </details>
+ 
+- **Index를 사용하여 탐색하는 것보다 Full Scan탐색이 더 좋은 상황이 있는가?**
+    
+    <details>
+    table에 데이터가 조금 있을 때, 조회하려는 데이터가 테이블의 상당 부분을 차지할 때<br>
+    index 사용할 지 Full Scan할 지는 optimizer가 판단
+    </details>
 
 ### 트랜잭션
 
