--- a/12주차.md
+++ b/12주차.md
@@ -157,6 +157,13 @@
     table에 데이터가 조금 있을 때, 조회하려는 데이터가 테이블의 상당 부분을 차지할 때<br>
     index 사용할 지 Full Scan할 지는 optimizer가 판단
     </details>
+    
+- **이진 탐색 트리란?**
+    
+    <details>
+    하나의 부모가 두 개의 자식만 가진 트리
+    균형이 맞지 않으면 검색 효율이 선형검색 급으로 떨어진다.
+    </details>
 
 ### 트랜잭션
 
