--- a/12주차.md
+++ b/12주차.md
@@ -204,6 +204,12 @@
   롤백은 특정 트랜잭션 또는 트랜잭션 세트를 취소하여 데이터베이스를 이전 상태로 복원하는 작업입니다. <br>
       트랜잭션이 정상적으로 종료되지 않았을 때, Last Consitent state로 RollBack 할 수 있음.
   </details>
+    
+ - **식사하는 철학자 문제에 대해 아는가? -> 각각의 트랜잭션 수행중에도 데드락 현상이 발생하는가?**
+
+  <details>
+  ![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/60d33abd-f732-4d60-a381-a5fb0a340c19/Untitled.png)
+  </details>
 
   
 
