--- a/12주차.md
+++ b/12주차.md
@@ -205,14 +205,52 @@
       트랜잭션이 정상적으로 종료되지 않았을 때, Last Consitent state로 RollBack 할 수 있음.
   </details>
     
- - **식사하는 철학자 문제에 대해 아는가? -> 각각의 트랜잭션 수행중에도 데드락 현상이 발생하는가?**
+- **식사하는 철학자 문제에 대해 아는가? -> 각각의 트랜잭션 수행중에도 데드락 현상이 발생하는가?**
 
   <details>
-  ![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/60d33abd-f732-4d60-a381-a5fb0a340c19/Untitled.png)
+  각각의 트랜잭션이 필요한 리소스가 다른 트랜잭션에 있을 때 발생할 수 있다.
+  </details>
+    
+- **DBMS의 구조에 대해 설명하세요 -> 저장 시스템에 속하는 모듈 중 하나인 Page buffer manager은 무엇인가?**
+
+  <details>
+  (1)질의 처리기와 저장 시스템으로 이루어져 있다. <br>
+  (2)Main memory에 유지하는 페이지를 관리하는 모듈. Buffer 관리 정책에 따라, UNDO 복구와 REDO 복구가 요구되거나 그렇지 않게 되므로, transaction 관리에 매우 중요한 결정을 가져온다
+  </details>
+    
+- **Lock-based protocol이 무엇인가?**
+
+  <details>
+  데이터 베이스 관리 시스템에서 Lock-based protocol은 데이터 테이블, 인덱스 및 기타 데이터 구조와 같은 공유 리소스에 액세스하는 트랜잭션의 일관성 및 격리성을 보장하는데 사용되는 동시성 제어 메커니즘이다.
   </details>
 
-  
+- **Loong-term locking과 short-term locking의 차이점은?**
+
+  <details>
+  Long-term은 일관성을 예방하고, 동시성 레벨을 낮춘다. Short-term은 동시성 레벨을 높이나 일관성을 해칠 수 있다.
+  </details>
+    
+- **Lock-based protocol의 문제점 중에 기아 현상에 대해 아는가? -> 어떻게 방지하는가?**
+
+  <details>
+  (1)데이터 베이스의 기아 상태는 트랜잭션 또는 쿼리가 실행에 필요한 리소스를 사용할 수 있음에도 불구하고 다른 트랜잭션 또는 쿼리에 의해 독점되어 해당 리소스를 획득할 수 없는 상황을 말한다. <br>
+  (2)어떤 트랜잭션이나 쿼리도 리소스를 무한정 독점할 수 없도록 하는 스케줄링 알고리즘을 사용합니다. 여기에는 모든 트랜잭션과 쿼리가 리소스가 고갈되지 않고 적시에 완료될 수 있도록 우선 순위 대기열, 리소스 선점 및 시간 초과 메커니즘과 같은 기술을 사용하는 것이 포함될 수 있습니다.
+  </details>
+ 
+- **동시성 제어 기술 중에서 2PL에 대해 아는가?**
+
+  <details>
+  2PL에서 트랜잭션은 성장 단계와 축소 단계로 나뉜다. 성장 단계에서 트랜잭션은 액세스해야 하는 리소스에 대한 잠금을 획득한다. 모든 잠금이 획득되면 트랜잭션은 해당 작업을 실행할 수 있다. 축소 단게에서 트랜잭션은 성장 단계에서 획득한 잠금을 해제한다.
+  </details>
+    
+- **Undo vs Redo**
+
+  <details>
+  Undo는 트랜잭션이 실행되기전 데이터 베이스의 이전 상태에 대한 정보를 저장하므로 트랜잭션에 의해 변경된 내용을 취소하고 데이터 베이스를 이전 상태로 복원할 수 있다. <br>
+  Redo는 커밋되었지만 시스템 오류로 인해 손실되었을 수 있는 트랜잭션의 변경사항을 다시 적용하는 프로세스를 말한다.
+  </details>
 
 ### 정리 링크
 
 * 수민 : https://sustco.tistory.com/44 (비밀번호 : 1234)
+
