--- a/13주차.md
+++ b/13주차.md
@@ -46,6 +46,23 @@
   </details>
 
   참고 : https://joont92.github.io/db/%ED%8A%B8%EB%9E%9C%EC%9E%AD%EC%85%98-%EA%B2%A9%EB%A6%AC-%EC%88%98%EC%A4%80-isolation-level/  -> 여기서 UPDATE부정합!
+  
+- **낙관적 락에 대해 설명해주세요. -> 장점과 단점에 대해 설명해주세요.**
+
+  <details>
+  (1) 쉽게 말하면, 자원에 락을 걸어서 선점하지말고, 동시성 문제가 발생하면 그 때 가서 처리하자는 방법론이다. </br>
+  (2) 장점은 충돌이 안난다는 가정하에 동시 요청에 대해서 처리 성능이 좋다. 단점은 잦은 충돌이 일어나는 경우 롤백처리에 대한 비용이 많이 들어 오히려 성능에서 손해를 볼 수 있다.
+  </details>
+  
+- **비관적 락은 무엇인가? -> 그럼 Shared Lock과 Exclusive lock에 대해 아는가?**
+
+  <details>
+  (1) 비관적 락은 자원 요청에 따른 동시성 문제가 발생할 것이라고 예상하고 락을 걸어버리는 방법론이다. </br>
+  (2) Shared Lock의 경우, 다른 트랜잭션에서 읽기만 가능하다. 또한, Exclusive lock 적용이 불가능하다. Exclusive lock의 경우, 다른 트랜잭션에서 읽기, 쓰기가 둘다 불가능하다.
+  </details>
+  참고(동시성 제어 메커니즘 vs 트랜잭션 격리 수준) : https://hudi.blog/jpa-concurrency-control-optimistic-lock-and-pessimistic-lock/
+
+
 
 ### 저장 프로시저
 
@@ -82,11 +99,37 @@
   둘째, 호환성이 낮다면, 다른 DBMS로 마이그레이션하는 경우 문제가 발생할 수 있습니다. 마이그레이션하는 경우에는 대상 DBMS가 호환성을 갖추고 있는지 확인해야 합니다. 호환성이 낮은 코드는 마이그레이션하는 데 더 많은 시간과 비용이 들어갈 수 있습니다.<br>
   셋째, 호환성이 낮다면, 저장 프로시저 개발자가 다양한 DBMS에서 동일한 코드를 실행할 수 없습니다. 이 경우 개발자가 DBMS마다 별도의 코드를 작성해야 하므로 코드 작성 시간과 비용이 늘어날 수 있습니다.<br>
   </details>
+  
+  
+- **프로시저 VS 트리거**
+
+  <details>
+  프로시저: 미리 데이터 베이스 서버에 일련의 SQL 명령을 해놓고, 프로시저를 실행하여 SQL 명령을 간단하게 실행할 수 있도록 할 수 있다.</br>
+  트리거: 트리거는 테이블에 작성한다. 어떤 테이블에 행을 삽입한다든지, 행을 변경, 삭제 했을 때에 트리거가 설정되어 있으면 트리거의 SQL 문장이 자동으로 실행된다.
+  </details>
+  
+- **트리거의 장단점은?**
+  <details>
+  
+    **장점**
+
+    1. 데이터 일관성: 트리거는 외래 키 제약 조건과 같은 규칙을 자동으로 적용하고 데이터에 대한 무단 수정을 방지하여 데이터베이스 내의 데이터가 일관성을 유지하도록 도와줍니다.
+    2. 감사 추적: 트리거는 삽입, 업데이트 및 삭제와 같은 데이터베이스 이벤트의 감사 추적을 생성하는 데 사용할 수 있습니다. 이는 데이터베이스에서 변경 사항을 추적하고 문제를 디버깅하는 데 유용할 수 있습니다.
+    3. 자동화: 트리거는 관련 테이블 업데이트 또는 계산된 필드 생성과 같은 반복 작업을 자동화하여 수동 개입의 필요성을 줄이고 전반적인 효율성을 향상시킬 수 있습니다.
+    4. 비즈니스 로직: 트리거는 데이터베이스 내에서 비즈니스 로직을 캡슐화하여 관리 및 유지를 더 쉽게 만듭니다.
+
+    **단점**
+
+    1. 성능 영향: 트리거가 제대로 최적화되지 않은 경우 트리거가 데이터베이스 성능에 부정적인 영향을 미칠 수 있습니다. 이는 데이터베이스에 오버헤드를 추가하고 쿼리 및 트랜잭션 속도를 저하시킬 수 있기 때문입니다.
+    2. 복잡성: 특히 트리거가 복잡한 비즈니스 논리 또는 여러 이벤트와 관련된 경우 트리거를 작성하고 유지 관리하기가 복잡할 수 있습니다.
+    3. 숨겨진 논리: 트리거는 데이터베이스에 숨겨진 논리를 도입하여 문제를 이해하고 해결하기 어렵게 만들 수 있습니다.
+    4. 디버깅: 트리거는 특히 복잡한 이벤트에 의해 트리거되거나 복잡한 논리와 관련된 경우 디버깅하기 어려울 수 있습니다.
+  </details>
 
 ### 레디스(Redis)
 
 
-- **Redis 에 대해 간단하게 설명해주세요! **
+- **Redis 에 대해 간단하게 설명해주세요!**
 
   <details>
   A :  Redis는 고성능 키-값 저장소로서 String, list, hash, set, sorted set 등의 자료 구조를 지원하는 NoSQL <br>
@@ -115,7 +158,20 @@
   <details>
    Redis는 다중 스레드 방식을 지원하지 않으므로, Redis Cluster나 Redis Sentinel을 이용한 분산 처리 방식을 활용할 수 있습니다.
   </details>
+  
+- **DB가 있는데도 Redis라는 인메모리 데이터 구조 저장소를 사용하는 이유는?**
+
+  <details>
+     데이터 베이스는 데이터를 물리 디스크에 직접 쓰기 때문에 서버에 문제가 발생하여 다운되더라도 데이터가 손실되지 않습니다. 하지만, 매번 디스크에 접근해야 하기 때문에 사용자가 많아질수록 부하가 많아져서 느려질 수 있다.
+
+  일반적으로 서비스 운영 초반이거나 규모가 작은, 사용자가 많지 않은 서비스의 경우에는 WEB-WAS-DB의 구조로도 데이터 베이스에 무리가 가지 않는다.
+
+  하지만, 사용자가 늘어난다면 데이터 베이스가 과부하 될 수 있기 때문에 이 때 캐시 서버를 도입하여 사용한다. 그리고 이 캐시 서버로 이용할 수 있는 것이 바로 Redis이다.
+
+  캐시는 한 번 읽어온 데이터를 임의의 공간에 저장하여 다음에 읽을 때는 빠르게 결괏값을 받을 수 있도록 도와주는 공간이다.
+  </details>
 
 ### 정리 링크
 
 * 수민 : https://sustco.tistory.com/45 (비밀번호 : 1234)
+* 원형 : [트랜잭션 격리 수준] https://meadow-butter-70e.notion.site/17cbb458453a46ee8c64c87b2e0e24fc
