--- a/15주차.md
+++ b/15주차.md
@@ -85,7 +85,7 @@
     </details>
 
 - **Singly Linked List와 Doubly Linked List의 차이점은 무엇인가요?**
-    
+  
     <details>
     - Doubly Linked-List
         - Singly Linked - List
@@ -98,11 +98,39 @@
 
 ### Array vs ArrayList vs Linked-List
 
+- **Array(List)의 가장 큰 특징과 그로 인해 발생하는 장점과 단점에 대해 설명해주세요.**
+
+  <details>
+  Array의 가장 큰 특징은 순차적으로 데이터를 저장한다는 점입니다.
+  데이터에 순서가 있기 때문에 0부터 시작하는 index가 존재하며, index를 사용해 특정 요소를 찾고 조작이 가능하다는 것이 Array의 장점입니다.
+  순차적으로 존재하는 데이터의 중간에 요소가 삽입되거나 삭제되는 경우 그 뒤의 모든 요소들을 한 칸씩 뒤로 밀거나 당겨줘야 하는 단점도 있습니다.
+  이러한 이유로 Array는 정보가 자주 삭제되거나 추가되는 데이터를 담기에는 적절치 않습니다.
+  </details>
+
+- **Array를 적용시키면 좋을 데이터의 예를 구체적으로 들어주세요. 구체적 예시와 함께 Array를 적용하면 좋은 이유, 그리고 Array를 사용하지 않으면 어떻게 되는지 함께 설명해주세요**
+
+  <details>
+  Array를 적용시키면 좋은 예로 주식 차트가 있습니다.
+  주식 차트에 대한 데이터는 요소가 중간에 새롭게 추가되거나 삭제되는 정보가 아니며, 날짜별로 주식 가격이 차례대로 저장되어야 하는 데이터입니다.
+  즉, 순서가 굉장히 중요한 데이터이므로 Array 같이 순서를 보장해주는 자료구조를 사용하는 것이 좋습니다.
+  Array를 사용하지 않고 순서가 없는 자료 구조를 사용하는 경우에는 날짜별 주식 가격을 확인하기 어려우며 매번 전체 자료를 읽어 들이고 비교해야 하는 번거로움이 발생합니다.
+  </details>
+
+- **Array와 ArrayList의 차이점에 대해 설명해주세요.**
+
+  <details>
+  Array는 크기가 고정적이고, ArrayList는 크기가 가변적입니다.
+  Array는 초기화 시 메모리에 할당되어 ArrayList보다 속도가 빠르고,
+  ArrayList는 데이터 추가 및 삭제 시 메모리를 재할당하기 때문에 속도가 Array보다 느립니다.</details>
+
+
+  
+
 
 ### Stack & Queue
 
 - **Stack과 큐의 차이점에 대해 말해주세요 & 어떤 상황에서 사용되는지 말해주세요**
-    
+  
     <details>
     - 스택
         - 자료를 선형적으로 저장하는 자료구조
@@ -111,10 +139,11 @@
     - 큐
         - 자료를 일렬로 저장하는 자료 구조
         - 처음에 삽입된 자료가 가장 먼저 꺼내지는 FIFO
-        - 대기열 처리, 너비우선탐색, 캐시
+        - 대기열 처리, 너비우선탐색, 캐시</details>
 
-    </details>
-
+    
+  
+  
 - **스택 2개로 큐를, 큐 2개로 스택을 만드는 방법과, 그 시간복잡도에 대해 설명해 주세요.**
 
     <details>
@@ -129,6 +158,19 @@
         - 가장 마지막에 삽입된 데이터를 제거
     </details>
 
+- **Stack과 Queue의 실사용 예를 들어 간단히 설명해주세요.**
+
+    <details>
+    Stack - 자바의 Stack 메모리 영역
+    지역변수와 매개변수 데이터 값이 저장되는 공간이며, 메소드 호출시 메모리에 할당되고 종료되면 메모리가 해제되며,
+    LIFO(Last In First Out)구조를 가집니다.
+    <br><br>
+    Queue - OS의 스케쥴러
+    자원의 할당과 회수를 하는 스케쥴러 역할을 큐가 할 수 있습니다.
+    메모리에 적재된 다수의 프로세스 중 어떤 프로세스에게 자원을 할당할 것인가 그 순서를 결정하는 것이 자원의 효율적인 사용에 있고,
+    가장 단순한 형태의 스케쥴링 정책이 선입선처리(First Com First Served) 즉, 큐라고 볼 수 있습니다.
+    </details>
+    
 - **원형 큐에 대해 설명해주세요**
 
     <details>
@@ -149,7 +191,7 @@
     </details>
 
 - **최대힙과 최소힙의 차이에 대해 말해주세요**
-    
+  
     <details>
     - 최대힙 : 부모 노드의 키 값이 자식 노드의 키 값보다 크거나 같은 완전 이진 트리
     - 최소힙 : 부모 노드의 키 값이 자식 노드의 키 값보다 작거나 같은 완전 이진 트리
@@ -167,14 +209,13 @@
         - 루트 노드 존재 여부 : 루트 노드가 없음
         - 노드 간 관계성 : 부모와 자식 관계 없음
         - 모델의 종류 : 네트워크 모델
-
     - 트리
         - 방향성 : 방향그래프
         - 순환성 : 비순환
         - 루트 노드 존재 여부 : 루트 노드가 존재
         - 노드 간 관계성 : 부모와 자식 관계
         - 모델의 종류 : 계층 모델
-    </details>
+      </details>
 
 - **이진 트리에 대해 말해주세요**
 
@@ -217,15 +258,14 @@
     </details>
 
 - 이진탐색트리가 효율적이지 못한 경우를 말해주세요
-    
+  
     <details>
     한쪽으로 치우쳐진 균형이 이루어지지 않은 이진탐색 트리 -> 선형 탐색과 동등한 복잡도를 가진 경우
-    
     - O(n)
     - 그러면 이진탐색트리를 사용할 이유가 있을까?
-        - 이를 바로잡기 위해
-        - AVL Tree, RedBlack Tree
-    </details>
+      - 이를 바로잡기 위해
+      - AVL Tree, RedBlack Tree
+        </details>
 
 
 ### 해시 (Hash)
@@ -250,7 +290,7 @@
     </details>
 
 - **파이썬에서, 어떤 방식으로 해시 충돌을 처리하나요?** (각 본인이 사용하는 언어를 기준으로 hash 충돌 처리 원리에 대한 이해를 합시다 !)
-    
+  
     <details>
     파이썬의 딕셔너리(dict) 타입은 내부적으로 해시 테이블을 사용하며, 이를 통해 매우 빠른 검색과 삽입을 제공합니다. 하지만, 해시 충돌이 발생하면 체이닝을 통해 해결하므로, 최악의 경우에는 검색 및 삽입이 O(n)의 시간복잡도를 가질 수 있습니다. 그러나 대부분의 경우에는 충돌이 거의 발생하지 않기 때문에, 딕셔너리 타입은 매우 높은 성능을 보입니다.
 
@@ -277,19 +317,27 @@
     </details>
 
 - **B+트리는 B-트리의 어떤 문제점을 해결하고자 등장했나요?**
-    
+  
     <details>
-    B-트리의 순회작업에 대한 문제점. <br>
-    
-    풀 스캔 시 B트리는 모든 노드를 확인해야하지만, B+ 트리의 경우 리프노드에 연결된 연결리스트로 선형 탐색이 가능하다.
+    B-트리의 순회작업에 대한 문제점. <br>풀 스캔 시 B트리는 모든 노드를 확인해야하지만, B+ 트리의 경우 리프노드에 연결된 연결리스트로 선형 탐색이 가능하다.
     </details>
-
-- **그렇다면, B+Tree가 B-Tree에 비해 반드시 좋다고 할 수 있을까요? 그렇지 않다면 어떤 단점이 있을까요?**
     
+- **그렇다면, B+Tree가 B-Tree에 비해 반드시 좋다고 할 수 있을까요? 그렇지 않다면 어떤 단점이 있을까요?**
+  
     <details>
     B Tree의 경우 best case에는 루트에서 끝날수 있지만, B+Tree의 경우 무조건 leaf노드까지 가야한다.
     </details>
+    
+-  **기존 B+트리와 InnoDB의 B+트리와의 차이점은 뭘까요?**
+
+    <details>
+    기존 B+트리는 리프노드가 SingleLinkedList이지만, InnoDB의 리프노드는 DoubleLinkedList있고 자식노드로는 SingbleLinkedList로 연결되어있다. 등등
+    </details>
+
+    
 
 ## 정리 링크
 
 * 세정 : [자료구조 질문 정리](https://evening-november-9ec.notion.site/15-8188fa8e3aff49ca9ce02158b30dc946)
+
+* 수민 : https://sustco.tistory.com/46 (1234)
