[04.21] 예전 답변 일부 수정

--- a/2주차.md
+++ b/2주차.md
@@ -19,14 +19,32 @@
 4. stack과 heap의 크기가 결정되는 시점은 언제인가요?
     <details>
         <summary>답변보기</summary>
-        stack의 크기는 운영체제에 의해 시작 시 프로그램에 할당 되며, 고정된 크기를 가집니다. <br>
-        heap의 크기는 프로그래머에 의해 결정되며 프로그램 실행중에 동적으로 변경된다.
+        일반적으로 운영체제는 프로그램을 실행할 때 스택 영역의 초기 크기를 설정합니다. 이 초기 크기는 컴파일러나 런타임 라이브러리에서 지정된 기본값을 사용하거나, 운영체제에서 지정한 기본값을 사용할 수 있습니다.<br>
+        heap의 크기는 프로그래머에 의해 결정되며 프로그램 실행중에 동적으로 변경된다.</details>
+    
+    <details>
+        <summary>스택의 크기 결정시점에 대한 gpt4 답변</summary>
+        <br><br>
+    스택의 크기 결정시점에 대한 gpt4 답변V<br><br>
+    스택의 크기는 프로그램이 실행되는 동안 동적으로 결정됩니다. 스택의 크기는 프로그램에서 함수를 호출하고 반환할 때마다 변경됩니다.<br>일반적으로 운영체제는 프로그램을 실행할 때 스택 영역의 초기 크기를 설정합니다. 이 초기 크기는 컴파일러나 런타임 라이브러리에서 지정된 기본값을 사용하거나, 운영체제에서 지정한 기본값을 사용할 수 있습니다.<br>하지만 프로그램이 실행되면서 함수를 호출하고 반환하는 등의 작업을 수행하면서 스택의 크기가 동적으로 변합니다. 예를 들어, 함수를 호출할 때마다 호출된 함수의 인자값과 지역 변수 등이 스택에 저장되고, 함수를 반환할 때 이들이 스택에서 제거됩니다. 따라서 스택의 크기는 이러한 작업을 수행하는 동안 동적으로 결정됩니다.<br>스택의 크기가 너무 작거나 크면 프로그램의 실행 중에 스택 오버플로우나 스택의 낭비 등의 문제가 발생할 수 있습니다. 따라서 스택의 크기를 조정하여 적절한 크기로 유지하는 것이 중요합니다. 스택의 크기를 조정하는 것은 컴파일러나 런타임 환경에서 제공하는 설정 옵션으로 조정할 수도 있습니다. 디버깅할 때도 스택의 크기를 적절하게 조정하여 디버깅을 수행하는 것이 좋습니다.
     </details>
+    
+    
 5. stack과 Heap 중 접근 속도가 빠른 공간은 어디일까요?
     <details>
         <summary>답변보기</summary>
         <p>stack이 빠릅니다.<p>
         stack의 경우는 이미 메모리 상에 할당이 되어 있기 때문에 코드를 컴파일 할때 스택에 있는 변수의 위치를 알고 있지만, heap은 사용자에 따라 동적으로 할당하는 공간이기 때문에 컴파일러가 어느 위치에 변수가 저장되어있는지를 알고 있지 않다.
+    </details>
+    
+    <details>
+        <summary>gpt4 답변</summary>
+    <br><br>
+        일반적으로 stack이 heap보다 더 빠른 접근 속도를 가집니다. 이는 stack이 메모리의 연속된 공간을 사용하고, 특정한 메모리 주소를 기준으로 스택 포인터(Stack Pointer)가 상대적으로 적은 메모리 주소로 이동하면서 스택 프레임(Stack Frame)을 생성하고 삭제하기 때문입니다.
+    <br><br>
+    반면, Heap은 동적 할당(Dynamic Allocation)된 메모리 공간을 사용하고, 여러 개의 조각으로 분산되어 있을 수 있습니다. 이는 메모리 할당 및 해제 시에 포인터와 인덱싱 연산을 통해 메모리 주소를 계산해야 하므로 stack에 비해 접근 속도가 느릴 수 있습니다.
+    <br><br>
+    그러나, 이는 일반적인 경우에 해당하는 이야기이며, 실제 접근 속도는 시스템 환경 및 사용 방법에 따라 달라질 수 있습니다. 또한, 최근의 하드웨어와 컴파일러는 메모리 접근 최적화를 수행하므로, 성능 상의 차이가 크지 않을 수도 있습니다.
     </details>
 6. 재귀함수를 너무 많이 호출하면 나오는 오류와 그 오류가 발생하는 이유는 무엇인가요?
     <details>
