--- a/3주차.md
+++ b/3주차.md
@@ -57,6 +57,27 @@
          ```
    </details>
 
+   <details>
+       <summary>gpt답변</summary>
+         시스템콜(System Call)은 사용자 모드(User Mode)에서 실행 중인 프로그램이 커널 모드(Kernel Mode)로 전환하여 운영체제 커널 내의 함수를 호출하는 방식으로 동작합니다. 이를 간단히 요약하면, 사용자 모드에서 실행 중인 프로그램이 운영체제의 서비스를 호출하는 것입니다.
+   <br><br>
+   시스템콜이 동작하는 방식은 다음과 같습니다.
+   <br><br>
+   1. 사용자 모드에서 실행 중인 프로그램이 시스템콜을 호출합니다.
+   <br>
+   2. 시스템콜은 CPU에서 실행 중인 프로그램을 일시적으로 멈추고, 인터럽트(Interrupt)를 발생시킵니다.
+   <br>
+   3. 발생한 인터럽트는 운영체제 내부에서 처리됩니다. 이때, 시스템콜 핸들러(System Call Handler)가 실행됩니다.
+   <br>
+   4. 시스템콜 핸들러는 사용자 모드에서 호출한 시스템콜의 종류를 확인하고, 해당하는 서비스를 제공하는 커널 내부의 함수를 호출합니다.
+   <br>
+   5. 호출된 함수가 실행을 완료하면, 결과를 시스템콜 핸들러에 반환합니다.
+   <br>
+   6. 시스템콜 핸들러는 반환된 결과를 사용자 모드로 전달하고, 다시 CPU를 사용자 모드에서 실행 중인 프로그램으로 전환합니다.
+   <br>
+   이러한 방식으로 시스템콜은 사용자 모드와 커널 모드 간의 접점이 되어, 운영체제에서 제공하는 서비스를 호출하고, 보안 및 안정성을 유지하면서 프로그램이 실행될 수 있도록 합니다.
+   </details>
+
 8. 인터럽트 vs 시스템콜
 
    <details>
@@ -179,7 +200,7 @@
          5. Session layer에서는 장치간의 연결 세션을 설정하고 시간초과, 오류등을 체크한다.<br>
          6. Presentation layer에서는 데이터를 애플리케이션 계층에 전달하기 위해 암호화 된 데이터를 해석하거나, 압축한 데이터를 압축해제하는 등 데이터를 해석하는 역할을 수행한다.<br>
          7. Application Layer에서 해당 프로토콜의 종류를 해석하고 해당 프로토콜에 맞는 해석방법을 통해 데이터를 해석하거나, 인증 및 권한 부여 문제도 해결한다.
-     
+    
     </details>
 
 
