--- a/2주차.md
+++ b/2주차.md
@@ -55,7 +55,7 @@
 7. 동시성과 병렬처리의 차이점?
     <details>
         <summary>답변보기</summary>
-        동시성의 경우 멀티프로세스나 멀티스레드 방식을 이용하여 context switching을 이용하여 동시에 실행하는 것처럼 보이게 하는 것을 의미<br>
+        동시성의 경우, 멀티프로세스나 멀티스레드 방식에서 context switching을 이용하여 동시에 실행하는 것처럼 보이게 하는 것을 의미<br>
         병렬성은 멀티코어 즉 물리적인 코어가 여러개인 점을 이용해 동일한 시간에 독립적인 작업을 실행할 수 있음을 의미한다.
     </details>
 8. 크롬과 IE의 차이점과 장단점? (멀티프로세스와 멀티스레드의 예시)
