--- a/15주차.md
+++ b/15주차.md
@@ -283,10 +283,10 @@
 - **해시값이 충돌했을 때, 어떤 방식으로 처리할 수 있을까요?**
 
     <details>
-    1. **체이닝** : 연결리스트로 노드를 계속 추가해나가는 방식 (제한 없이 계속 연결 가능, but 메모리 문제)
-    2. **Open Addressing** : 해시 함수로 얻은 주소가 아닌 다른 주소에 데이터를 저장할 수 있도록 허용 (해당 키 값에 저장되어있으면 다음 주소에 저장)
-    3. **선형 탐사** : 정해진 고정 폭으로 옮겨 해시값의 중복을 피함
-    4. **제곱 탐사** : 정해진 고정 폭을 제곱수로 옮겨 해시값의 중복을 피함
+    1. 체이닝 : 연결리스트로 노드를 계속 추가해나가는 방식 (제한 없이 계속 연결 가능, but 메모리 문제) <br>
+    2. Open Addressing: 해시 함수로 얻은 주소가 아닌 다른 주소에 데이터를 저장할 수 있도록 허용 (해당 키 값에 저장되어있으면 다음 주소에 저장) <br>
+    3. 선형 탐사 : 정해진 고정 폭으로 옮겨 해시값의 중복을 피함 <br>
+    4. 제곱 탐사 : 정해진 고정 폭을 제곱수로 옮겨 해시값의 중복을 피함 <br>
     </details>
 
 - **파이썬에서, 어떤 방식으로 해시 충돌을 처리하나요?** (각 본인이 사용하는 언어를 기준으로 hash 충돌 처리 원리에 대한 이해를 합시다 !)
