--- a/15주차.md
+++ b/15주차.md
@@ -273,11 +273,11 @@
 - **해시의 장점&단점에 대해 말해주세요**
 
     <details>
-    - 해시테이블은 key-value가 1:1로 매핑되어 있기 때문에 삽입, 삭제, 검색의 과정에서 모두 평균적으로O(1)의 시간복잡도를 가지고 있다.
-    - 단점
-        - 해시 충돌이 발생
-        - 순서/관계가 있는 배열에는 어울리지 않는다.
-        - 공간 효율성이 떨어진다.
+    - 해시테이블은 key-value가 1:1로 매핑되어 있기 때문에 삽입, 삭제, 검색의 과정에서 모두 평균적으로O(1)의 시간복잡도를 가지고 있다. <br>
+    - 단점 <br>
+        - 해시 충돌이 발생 <br>
+        - 순서/관계가 있는 배열에는 어울리지 않는다. <br>
+        - 공간 효율성이 떨어진다. <br>
     </details>
 
 - **해시값이 충돌했을 때, 어떤 방식으로 처리할 수 있을까요?**
