[Fix] 7번 답변 오류 수정
공뮤 -> 공유

--- a/4주차.md
+++ b/4주차.md
@@ -74,7 +74,7 @@
 
    <details>
        <summary>답변보기</summary>
-         공뮤 메모리 방식. 중개자 없이 곧바로 메모리에 접근할 수 있기 때문에 가장 빠르다.
+         공유 메모리 방식. 중개자 없이 곧바로 메모리에 접근할 수 있기 때문에 가장 빠르다.
    </details>
 
 
