[04.28] 4주차 질문 수정

--- a/4주차.md
+++ b/4주차.md
@@ -56,6 +56,7 @@
       4. 인터럽트를 받아들일 수 있다면 CPU는 지금까지의 작업을 PCB에 백업한다. <br>
       5. CPU는 인터럽트 벡터를 참조하여 인터럽트 서비스 루틴을 실행한다. <br>
       6. 인터럽트 서비스 루틴 실행이 끝나면 4번에서 백업해 둔 작업을 복구하여 실행을 재개한다.
+   <br> -> 그 당시에는 인터럽트 받아도 현재 수행중인 명령어는 수행하고 인터럽트 시작! 으로 조사를 했었는데, 지금 생각하니 이상한것같은! 우선 gpt4는 상관없다고 했어유 확실히 알아보고!
    </details>
 
 5. IPC란 무엇인가? 
